tests/testcases/invalid/semantic/19_until_condition_not_bool.ciel
// Error: until condition must be of type 'bool'
struct S { int x; };
int main() {
    struct S s;
    until (s) {  // Error: s is struct, not bool, integral or float
    }
    return 0;
}
